Learned about Developer tools on a browser

--- a/CSS/Selectors.css
+++ b/CSS/Selectors.css
@@ -21,4 +21,7 @@ footer,span{
     background-color: goldenrod;
     color: white;
 }
+#Border{
+    border: 2px solid purple;
+}
 /* This is how you comment out in a Css file */
