Learned about Box model, margin and property in css

--- a/CSS/BoxModel.css
+++ b/CSS/BoxModel.css
@@ -1,6 +1,23 @@
+body{
+    background-color: cyan;
+}
 .First{
     background-color: rgb(233, 64, 64);
     border: 5px solid rgb(0, 0, 0);
+    border-radius: 38px;
+ 
+     *{               /* Universal selector in CSS*/
+        box-sizing: border-box; /* this is used to fix the border size and the box*/
+        margin-top:20px;
+        margin-bottom: 5px;
+        margin-left: 24px;
+        margin: right 15px;
+        padding: 25px 23px;
+        margin: 34px;
+    }  
+    
+    /* border-radius: 45px;
+    width: 533px; */
     /* We can set padding as left,right,top,bottom */
     /* padding: 19px;
     padding-left: 78px;
@@ -8,11 +25,10 @@
     padding-top: 33px;
     padding-bottom: 56px; */
 
+    
     /* padding : 23px 5px 56px 78px; padding - top right bottom left; */
 
     /* padding: y(top/bottom) x(left/right); */ /* to set top=bottom, and left=right. */
-    padding: 45px 23px;
-
-
-    margin: 34px;
+   
+  
 }
