--- a/CSS/Position.css
+++ b/CSS/Position.css
@@ -14,6 +14,8 @@
 }
 
 #box3{
+    /* position: static; */
+    /* position: static --> this is the default value of the position and it has no effect of any properties.*/
     /* position: relative;  */
     /* position: relative: Position of elements are relative to its normal position and will leave a gap at its normal position  */
     /* position:absolute; */
