--- a/CSS/Transform.css
+++ b/CSS/Transform.css
@@ -1,10 +1,32 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
 .container{
+    height: 80vh;
+    background-color: tan;
     display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 .box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background: brown;
     border: 2px solid red;
     border-radius: 8px;
     height: 400px;
     width: 400px;
+    transition: all 1s ease-in-out;
+}
+
+.box:hover{
+    transform: rotate(360deg);
+    /* transform: translate(50px, 20px); */ /* Move 50px right and 20px down     */
+        /* transform: skew(30deg, 0); */ /* Skew 30 degrees along the X-axis */
+        /* transform-origin: center center; */
+        /* transform: scale(1.5); */ /* Scale up by 1.5 times */
+      
 }
