--- a/All-About-Learning/Express/static/style.css
+++ b/All-About-Learning/Express/static/style.css
@@ -1,3 +1,58 @@
 * {
     font-family: "Arial", "Helvetica", "sans-serif";
+    margin: 0;
+    padding: 0;
+}
+
+nav {
+    background-color: #000000;
+    padding: 12px;
+}
+
+ul {
+    display: flex;
+    flex-direction: row;
+
+}
+
+li {
+    list-style: none;
+    padding: 3px 15px;
+
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+}
+
+h2 {
+    text-align: center;
+}
+body::before {
+    opacity: 0.8;
+    content: "";
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    top: 0px;
+    position: absolute;
+    background: url('/static/bg.jpg') no-repeat center center; 
+}
+
+.container {
+    margin: 35px 0px;
+    border-radius: 8px;
+    max-width: 70%;
+}
+
+input, textarea {
+    display: block;
+    padding: 3px ;
+    margin: 10px auto;
+    width: 60%;
+    outline: none;
+    border: 2px solid black;
+    border-radius: 5px;
 }
