started learning about how to submit data in the form and how to store it by using express

--- a/All-About-Learning/Express/views/index.pug
+++ b/All-About-Learning/Express/views/index.pug
@@ -20,11 +20,12 @@
     <div class="container">
 
         <h2>Get this Gym Membership for 10$ only - Fill this form now</h2>
-        <form action="/" id="contact">
+        <form action="/" method="post" id="contact">
             <input type="text" name="name" id="name" placeholder="Enter your Name">
             <input type="age" name="name" id="name" placeholder="Enter your age">
             <textarea name="address" id="address" cols="30" rows="10" placeholder="Enter your address"></textarea>
             <textarea name="more" id="moer" cols="30" rows="10" placeholder="More About You..."></textarea>
+            <button class="btn">Submit</button>
         </form>
     </div>
 </body>
