--- a/All-About-Learning/Express/static/style.css
+++ b/All-About-Learning/Express/static/style.css
@@ -5,7 +5,7 @@
 }
 
 nav {
-    background-color: #000000;
+    background-color: #302d2d;
     padding: 12px;
 }
 
@@ -18,7 +18,6 @@ ul {
 li {
     list-style: none;
     padding: 3px 15px;
-
 }
 
 a {
@@ -29,12 +28,13 @@ a {
 
 h2 {
     text-align: center;
+    color: black;
 }
 body::before {
-    opacity: 0.8;
+    opacity: 0.5;
     content: "";
     width: 100%;
-    height: 100%;
+    height: 800px;
     z-index: -1;
     top: 0px;
     position: absolute;
@@ -42,7 +42,7 @@ body::before {
 }
 
 .container {
-    margin: 35px 0px;
+    margin: 35px auto;
     border-radius: 8px;
     max-width: 70%;
 }
@@ -50,9 +50,23 @@ body::before {
 input, textarea {
     display: block;
     padding: 3px ;
-    margin: 10px auto;
+    margin: 15px auto;
     width: 60%;
     outline: none;
     border: 2px solid black;
-    border-radius: 5px;
+    border-radius: 3px;
+}
+
+.btn {
+    margin: 4px auto;
+    display: block;
+    padding:5px 12px;
+    background: #302d2d;
+    color: white;
+    font-weight: bold;
+    font-size: 13px;
+    border: 2px solid black;
+    border-radius: 8px;
+    cursor: pointer;
+    outline: none;
 }
